poster card refactor, fix buttons overflow

--- a/src/components/components/PosterCard/PosterCard.css
+++ b/src/components/components/PosterCard/PosterCard.css
@@ -40,7 +40,7 @@
     bottom: 0;
     right: 0;
     z-index: 0;
-    background: linear-gradient(transparent, rgba(2, 3, 19, 0.6));
+    background: linear-gradient(transparent, var(--colors_bg_main_transparent));
 }
 
 .poster-card__poster-wrapper {
@@ -75,7 +75,7 @@
 
 .poster-card__caption {
     margin: 0;
-    padding: 15px 10px 30px;
+    padding: 15px 10px 20px;
     box-sizing: border-box;
     border-radius: 10px;
     width: 100cqw;
@@ -86,9 +86,15 @@
     left: 0;
     right: 0;
     z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: .15fr .15fr 1fr;
+    grid-template-areas:
+        'rating buttons'
+        '. buttons'
+        'title title';
+    row-gap: 20px;
+    justify-items: center;
     transition: all .2s linear;
 }
 
@@ -108,6 +114,30 @@
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
+    grid-area: title;
+    align-self: flex-end;
+}
+
+.poster-card__rating-wrapper {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    grid-area: rating;
+    justify-self: flex-start;
+    opacity: 0;
+    opacity: transform .2s linear;
+}
+
+.poster-card__button-wrapper {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    grid-area: buttons;
+    justify-self: flex-end;
+    position: relative;
+    z-index: 6;
+    opacity: 0;
+    opacity: transform .2s linear;
 }
 
 .poster-card__link-wrapper {
@@ -125,39 +155,14 @@
     background-color: transparent;
 }
 
-.poster-card__rating-wrapper {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 3;
-    opacity: 0;
-    opacity: transform .2s linear;
-}
-
-.poster-card__button-wrapper {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    position: absolute;
-    top: 13px;
-    right: 13px;
-    z-index: 6;
-    opacity: 0;
-    opacity: transform .2s linear;
-}
-
 @media screen and (min-width: 1024px) {
     .poster-card__link-wrapper:hover {
         cursor: pointer;
     }
 
     .poster-card:hover .poster-card__caption {
-        background-color: var(--colors_bg_black_transparent);
+        background-color: var(--colors_bg_main_transparent);
         backdrop-filter: blur(5px);
-        align-items: center;
         transition: all .2s linear;
     }
 
@@ -169,6 +174,7 @@
     .poster-card:hover .poster-card__title {
         -webkit-line-clamp: 7;
         line-clamp: 7;
+        align-self: flex-start;
     }
 
     .poster-card:hover .poster-card__rating-wrapper {
